Bug 247628 - Files in a 7z-archive not displayed
Summary: Files in a 7z-archive not displayed
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (show other bugs)
Version: 2.15
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Harald Hvaal
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-13 11:45 UTC by Torsten Bielen
Modified: 2010-08-16 18:14 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In: 4.5.1


Attachments
7z l -slt TCExportDaten.7z (24.05 KB, application/x-7z-compressed)
2010-08-15 22:08 UTC, Torsten Bielen
Details
Output 7z (938 bytes, text/plain)
2010-08-16 09:43 UTC, Torsten Bielen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Torsten Bielen 2010-08-13 11:45:17 UTC
Version:           unspecified (using KDE 4.5.0) 
OS:                Linux

Version ark: 2.15
Kde: 4.5.0

Files in a 7z-archive weren't displayed in ark's content pane. 

Firstly I thought there's a problem with adding files in an 7z-archive because nothing happens if I add a file.

But the files stored correctly (checked with 7z) the only problem is displaying the files in the content pane. It remains empty.

I checked both 7z-archives created by ark itself and archives created by other tools.  

Reproducible: Always

Steps to Reproduce:
Open a 7z archive.
Comment 1 Raphael Kubo da Costa 2010-08-13 17:07:43 UTC
What version of 7zip is installed?
Comment 2 Torsten Bielen 2010-08-13 17:14:23 UTC
(In reply to comment #1)
> What version of 7zip is installed?

The RPM-Version is 9.04-2.1 (64 bit) created on 19.10.2009

7Z shows: 
7-Zip 9.04 beta  Copyright (c) 1999-2009 Igor Pavlov  2009-05-30
p7zip Version 9.04 (locale=de_DE.UTF-8,Utf16=on,HugeFiles=on,2 CPUs)
Comment 3 Raphael Kubo da Costa 2010-08-13 18:50:27 UTC
Can you post the output of "7z l -slt <SOMEFILE>.7z"?
Comment 4 Torsten Bielen 2010-08-15 22:08:10 UTC
Created attachment 50587 [details]
7z l -slt TCExportDaten.7z

The output of 7z l -slt <Some file>.7z
Comment 5 Raphael Kubo da Costa 2010-08-15 23:41:42 UTC
The attachment seems to be <Some file>.7z itself, not the result of 7z's output.
Comment 6 Torsten Bielen 2010-08-16 09:43:19 UTC
Created attachment 50604 [details]
Output 7z
Comment 7 Torsten Bielen 2010-08-16 15:55:59 UTC
(In reply to comment #5)
> The attachment seems to be <Some file>.7z itself, not the result of 7z's
> output.

Sorry - my mistake. Now I attach the correct file. If you need any add. info let me know.
Comment 8 Raphael Kubo da Costa 2010-08-16 18:13:03 UTC
SVN commit 1164368 by rkcosta:

Support different 7z archive delimiters.

For some weird reason, 7z has decided to change the archive
delimiter from "----" to "--" from version 9.04 to 9.13.

We now detect both correctly.

CCBUG: 247628


 M  +4 -2      cliplugin.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1164368
Comment 9 Raphael Kubo da Costa 2010-08-16 18:14:30 UTC
SVN commit 1164369 by rkcosta:

Support different 7z archive delimiters.

For some weird reason, 7z has decided to change the archive
delimiter from "----" to "--" from version 9.04 to 9.13.

We now detect both correctly.

Backport of r1164368.

BUG: 247628
FIXED-IN: 4.5.1


 M  +4 -2      cliplugin.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1164369