Support different 7z archive delimiters.

For some weird reason, 7z has decided to change the archive
delimiter from "----" to "--" from version 9.04 to 9.13.

We now detect both correctly.

Backport of r1164368.

BUG: 247628
FIXED-IN: 4.5.1

svn path=/branches/KDE/4.5/kdeutils/ark/; revision=1164369